wrap fix

--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -155,7 +155,7 @@
 
 }
 
-.book-container-content, h3, p {
+.book-container-content h3, p {
     color: black;
 }
 
